
  * Array#append  [Feature #12746]
  * Array#prepend  [Feature #12746]

* Integer

  * Integer.sqrt  [Feature #13219]
  * Integer#step does no longer rescue exceptions when given
    a step value which cannot be compared with #> to 0. [Feature #7688]

* IO

  * IO#pread  [Feature #4532]
  * IO#pwrite  [Feature #4532]

* IOError

  * exception message "stream closed" is changed  [Bug #13405]

* Numeric

  * Numerical comparison operators (<,<=,>=,>) no longer rescue exceptions
    of #coerce. Return nil in #coerce if the coercion is impossible.
    [Feature #7688]

* Range
  * Range#initialize no longer rescue exceptions when comparing begin and
    end with #<=> and raise a "bad value for range" ArgumentError
    but instead let the exception from the #<=> call go through.
    [Feature #7688]

* Regexp
  * Update Onigmo 6.1.1.
    * Support absent operator https://github.com/k-takata/Onigmo/issues/82

* Thread

  * Thread#fetch  [Feature #13009]

* String

  * String#-@ deduplicates unfrozen strings.  Already-frozen
    strings remain unchanged for compatibility.  [Feature #13077]
  * -"literal" (String#-@) optimized to return the same object
    (same as "literal".freeze in Ruby 2.1+) [Feature #13295]

=== Stdlib updates (outstanding ones only)

* Net::HTTP
  * Net::HTTP#proxy_user and Net::HTTP#proxy_pass now reflects http_proxy
    environment variable if the system's environment variable is multiuser
    safe. [Bug #12921]

* RbConfig
  * New constants:
    * RbConfig::LIMITS is added to provide the limits of C types.

=== Compatibility issues (excluding feature bug fixes)

* Random.raw_seed renamed to become Random.urandom.  It is now
  applicable to non-seeding purposes due to [Bug #9569].

* BasicSocket#read_nonblock and BasicSocket#write_nonblock no
  longer sets the O_NONBLOCK file description flag as side effect
  [Feature #13362]

=== Stdlib compatibility issues (excluding feature bug fixes)

* mathn.rb
  Removed from stdlib. [Feature #10169]
